syntax = "proto3";

option go_package="grpc-ms/services/proto/order";

message CreateOrderRequest {
  int64 user_id = 1;
  repeated Item items = 2;
  float total_price = 3;
}

message Item {
  string product_code = 1;
  float unit_price = 2;
  int32 quantity = 3;
}

message CreateOrderResponse {
  int64 order_id = 1;
}

service Order {
  rpc Create(CreateOrderRequest) returns (CreateOrderResponse) {}
}

/* 

protoc -I ./proto \
  --go_out ./golang \
  --go_grpc_out ./golang \
  --go_opt paths=source_relative \
  --go_grpc_opt paths=source_relative \
  ./proto/orders.proto

*/